[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pipelinerx"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for diagnosing and repairing broken data pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PipelineRx Team"},
]
keywords = ["reinforcement-learning", "data-engineering", "openenv", "fastapi", "data-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

[project.urls]
Homepage = "https://github.com/pipelinerx/pipelinerx"
Repository = "https://github.com/pipelinerx/pipelinerx"

[project.scripts]
server = "server.app:main"
pipelinerx-serve = "server.app:main"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
